Fixed CSS bug with wrong background-color when menu-item is also a default-menu.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/menu/Menu.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/menu/Menu.css
@@ -60,7 +60,7 @@
   &:not(.disabled):hover {
     color: @hover-color;
 
-    &.default-menu {
+    &.menu-button.default-menu {
       background-color: @palette-blue-5;
     }
 
